# notes

./: Readme.md  backup.sh  rex-compiler.txt  time.c
nano/: Readme.md  install.sh  nanorc
rex/: Readme.md  build-autotools.sh  build.sh  fedora.sh  full-build.sh  setup.sh
rex/rose-examples/insert/: debug.h
rex/rose-examples/return-trans/: ret-trans
rex/rose-examples/rm-ast/: remove.cpp  test.c
rose-examples/: Readme.md  build.sh
rose-examples/insert/: db-insert.cpp  pragma_test.c  rose_pragma_test.c
rose-examples/return-trans/: ret-trans.cpp
rose-examples/rm-ast/: remove
snippets/: current_desktop.c  current_desktop.cpp  llvm1.cpp  llvm2.c  random.c
templates/flex-bison/: CMakeLists.txt  file.txt  grammar.y  lex.l  main.c
vhdl/: adder.vhdl  run.sh  test.vhdl
